# liblzf-cmake

./: .gitignore  CMakeLists.txt  Changes  README  liblzf-config.cmake.in  liblzf.pc.in
src/include/: lzf.h
src/lib/: lzfP.h  lzf_c.c
